# AiBToS-Project2

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  run_all.sh
src/: Data.cpp  Data.h  Naive.cpp  Naive.h  Program.cpp  SimpleParser.cpp  SimpleParser.h  TriangleParser.cpp  TriangleParser.h
src/interface/: NeighborJoining.h  Parser.h
